DTSPB-4261 Fix Sonar issue